syntax = "proto3";

option go_package = "/transport";

message Response {
  int32  code = 1;
  string msg = 2;
}

message Connect {
  string AgentId = 1;
  string ClientId = 2;
}

message Disconnect {
  string AgentId = 1;
  string ClientId = 2;
}

message Publish {
  string AgentId = 1;
  string Topic = 2;
  bytes Payload = 3;
  int32 Qos = 4;
  bool Retain = 5;
}

service Transport {
  rpc PushConnect (Connect) returns (Response) {}
  rpc PushDisconnect (Disconnect) returns (Response) {}
  rpc PushPublish (Publish) returns (Response) {}
}